--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,7 +1,4 @@
-<h1>conatct page</h1>
-{{request.}}
-{% comment "Optional note" %}
-    <p>Commented out text with {{ create_date|date:"c" }}</p>
-{% endcomment %}
-<!--hel-->
-<p>contact page</p>
+{% extends "base.html" %}
+{% block content %}
+<h1>contact page</h1>
+{% endblock  %}
