--- a/src/templates/product/detail.html
+++ b/src/templates/product/detail.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %} 
+<div class="container">
+
+<h1>{{ product.title }}</h1>
+<p>{{ product.description }}</p>
+<p>ksh {{ product.price }}</p>
+<p></p>
+</div>
+
+{% endblock  %}
