--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,6 +46,7 @@ body {
     </style>
   </head>
   <body>
+    {% include "navbar.html" %}
     {% block content %}
     {% endblock content %}
   </body>
